@@ -1,3 +1,7 @@
+2025-08-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Escape control characters in report and log output (CVE-2025-54389),
+	  thanks to Rajesh Pangare for reporting this issue
+
 2025-07-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Release aide 0.19.1
 
